--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "router": "^1.3.7",
     "styled-reset": "^4.4.2",
+    "swiper": "^8.4.4",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
